# polars-s2

./: Cargo.toml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  test.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml
polars_s2/: __init__.py
src/: expressions.rs
