[package]
name = "polars_s2"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_s2"
crate-type = ["cdylib"]

[dependencies]
s2 = "0.0.12"
polars = { version = "*" }
pyo3 = { version = "*", features = ["extension-module"] }
pyo3-polars = { version = "*", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
