[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0", "polars>=0.19.11"]

[project]
name = "polars-s2"
version = "0.1.0"
authors = [
    { name = "Tyler Anderson", email = "31015976+tylanderson@users.noreply.github.com" },
]
description = "Polars plugin for S2 Cell."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
